# nebula-insurance-crm

./: .gitignore  docker-compose.qe.yml  docker-compose.yml  pyproject.toml  refernce_notes_F0024.md
neuron/: .dockerignore  Dockerfile  README.md  pyproject.toml
neuron/app/: __init__.py  actions.py  auth.py  bootstrap.py  config.py  engine_client.py  envelope.py  errors.py  main.py  messages.py  outreach_drafter.py  runtime.py  schemas.py  scope_guard.py  telemetry.py
neuron/app/contracts/: neuron-agent-card.schema.json  neuron-message-envelope.schema.json
neuron/app/models/: __init__.py  mock_provider.py  router.py
neuron/app/orchestration/: __init__.py  agent_card.py  glance.py  heads.py  plan.py  registries.py  task_manager.py  zone_heads.py
neuron/app/persistence/: __init__.py  in_memory.py  models.py  repository.py
neuron/app/tools/: __init__.py  engine_tools.py
neuron/config/: models.yaml
neuron/crm_agents/: __init__.py
neuron/crm_agents/cards/: crm.broker_activity.head.card.yaml  crm.intent_classifier.card.yaml  crm.pipeline.head.card.yaml  crm.renewals.head.card.yaml  crm.renewals.outreach_drafter.card.yaml  crm.scope_guard.card.yaml  crm.tasks.head.card.yaml  neuron.orchestrator.card.yaml
neuron/tests/: _path.py  conftest.py  test_actions.py  test_agent_cards.py  test_auth.py  test_bootstrap.py  test_engine_client.py  test_envelope.py  test_glance.py  test_persistence.py  test_plan_validation.py  test_registries.py  test_renewals_head.py  test_schema_drift.py  test_scope_guard.py  test_stub_zones.py  test_task_manager.py  test_telemetry.py
(+4838 files in other folders)
